fix(layout): title not visible on dark code theme

--- a/apps/client/src/stylesheets/style.css
+++ b/apps/client/src/stylesheets/style.css
@@ -2555,3 +2555,10 @@ iframe.print-iframe {
         }
     }
 }
+
+body.desktop .title-row {
+    height: 50px;
+    min-height: 50px;
+    align-items: center;
+    background: var(--note-split-background-color, var(--main-background-color));
+}
